--- a/manifest.json
+++ b/manifest.json
@@ -1,22 +1,20 @@
 {
-    "name": "MidniApp",
-    "short_name": "Midni",
-    "description": "Aplicación de Django convertida en PWA",
-    "start_url": "/",
-    "display": "standalone",
-    "background_color": "#ffffff",
-    "theme_color": "#ffffff",
-    "icons": [
-      {
-        "src": "icons/logo192.png",
-        "sizes": "192x192",
-        "type": "image/png"
-      },
-      {
-        "src": "icons/logo512.png",
-        "sizes": "512x512",
-        "type": "image/png"
-      }
-    ]
-  }
-  
+  "name": "miDNI",
+  "short_name": "miDNI",
+  "start_url": "/index.html",
+  "display": "standalone",
+  "background_color": "#f0f7ff",
+  "theme_color": "#007bff",
+  "icons": [
+    {
+      "src": "/icons/logo192.png",
+      "sizes": "192x192",
+      "type": "image/png"
+    },
+    {
+      "src": "/icons/logo512.png",
+      "sizes": "512x512",
+      "type": "image/png"
+    }
+  ]
+}
